# discord-agent

./: README.md  supabase_schema.sql
.github/workflows/: render-discord-bot.yml
discord-bot/: .env.example  .gitignore  bot.py  chain.py  main.py  pyproject.toml  rag_service.py
frontend/: .env.example  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/api/update-bot-config/: route.ts
frontend/app/api/upload-doc/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
